--- a/style.css
+++ b/style.css
@@ -9,12 +9,17 @@ body {
 }
 
 .calculator {
-    background-color: white;
-    width: 300px;
+    background-image: url(flames.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 500px;
+    background-color: rgb(253, 204, 255);
+    width: 350px;
     margin: 50px auto;
-    border: 1px solid #ccc;
+    border: 1px solid #cccccc;
     border-radius: 5px;
-    padding: 10px;
+    padding: 30px;
+    box-shadow: #aeff9f -5px -5px 5px;
 }
 
 #display {
@@ -22,17 +27,19 @@ body {
     margin-bottom: 10px;
     padding: 5px;
     font-size: 20px;
-    background-color: lightgray;
+    background-color: rgb(179, 255, 125);
+    box-shadow: #aeff9f 2px 2px 10px;
 }
 
 .keys {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 5px;
 }
 
 button {
-
+    background-color: rgba(238, 255, 155, 0.9);
+    border: 2px solid rgb(92, 92, 92); ;
     padding: 10px;
     font-size: 18px;
     cursor: pointer;
@@ -40,6 +47,6 @@ button {
 }
 
 button:hover {
-    background-color: #7d7d7d;
+    background-color: #ffc48d;
     transition: background-color 1 ease;
 }
